<resources>

    <string name="checkBox">com.example.winecellarsensor.view.checkBox</string>
    <string name="id">com.example.winecellarsensor.view.id</string>
    <string name="app_home">Home</string>
    <string name="app_statistic">Statistics</string>
    <string name="app_notification">Notifications</string>
    <string name="app_reload">Reload</string>
    <string name="app_percentage">%</string>
    <string name="contact">Contact</string>
    <string name="app_daily">Daily</string>
    <string name="app_weekly">Weekly</string>
    <string name="app_monthly">Monthly</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="app_call">Call</string>
    <string name="app_email">Email</string>
    <string name="app_message">Message</string>
    <string name="negative_popup_title">Value out of bounds</string>
    <string name="OK">OK</string>
    <string name="negativeTitle">Warning!</string>
    <string name="date_and_time">Date and time:</string>
    <string name="sensor_id">Sensor id:</string>
    <string name="no_value">no value</string>
    <string name="date_time">Date Time:</string>
    <string name="room_name">Room Name:</string>
    <string name="sensor">Sensor:</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="actual">Actual:</string>


</resources>
