<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e4e4e4"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/warning_room_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:fontFamily="cursive"
        android:text="Room name"
        android:textColor="@color/colorToolbar"
        android:textSize="35sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/date_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_and_time"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/date_time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_value"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/sensor_id_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sensor_id"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/sensor_id_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_value"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Value:"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/value_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_value"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/min_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Min value:"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/min_value_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_value"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/max_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Max value:"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/max_value_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_value"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

    </TableLayout>



</LinearLayout>



