<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDark"
    android:gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">


    <ImageView
        android:id="@+id/closeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:elevation="5dp"
        android:layout_alignParentRight="true"
        android:onClick="closeDialog"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/dialogMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_warning" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="28dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/negativeTitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="22dp"
                    android:text="@string/negative_popup_title"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date Time:"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:id="@+id/dialog_dateTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Room Name:"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:id="@+id/dialog_roomName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sensor:"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:id="@+id/dialog_sensorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_marginLeft="50dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Max:"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:id="@+id/dialog_max"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Min:"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:id="@+id/dialog_min"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Actual:"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <TextView
                        android:id="@+id/dialog_actual"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_OK"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_settings"
                    android:text="@string/OK"
                    android:textColor="@color/colorDark"
                    android:textSize="20dp"
                    android:onClick="saveToLogWarning"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>




</RelativeLayout>